[package]
name = "leaf-spread"
version = "0.1.0"
edition = "2021"
description = "A crate to iterate indefinitely over well spread points, similar to some leaf arrangement pattern in nature"
license = "Unlicense"
repository = "https://github.com/Inspirateur/leaf-spread"
keywords = ["sampling", "distribution", "evenly", "spaced", "points"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"